maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:23: error: not found: value xStart
 	var x = xStart
                ^JediEscaper:24: error: not found: value yStart
	var y = yStart
                ^JediEscaper:30: error: not found: value i
  setIndication(x, y, i)
                      ^